# Flight-Instruments-Demo

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/app/: MainWindow.cpp  MainWindow.h
src/flightsimulator/: FlightSimulator.cpp  FlightSimulator.h
src/model/: FlightModel.cpp  FlightModel.h
src/view/: ArtificialHorizonWidget.cpp  ArtificialHorizonWidget.h  FlightDisplayWidget.cpp  FlightDisplayWidget.h  altimeterwidget.cpp  altimeterwidget.h
